# ddt-motor

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
examples/: CMakeLists.txt  example_crc8.cpp  example_drive.cpp  example_drive_double_motor.cpp  example_drive_left_right_motor.cpp  example_drive_left_right_motor_current_input.cpp  example_drive_z_and_left_right_motor.cpp  example_drive_z_motor.cpp  example_observe.cpp  example_observe_simulation.cpp  example_observer_simulation.cpp  example_theta_motor.cpp  example_uart.cpp  example_write_id.cpp
include/ddt-motor/: angle_filter.hpp  crc8.hpp  motor.hpp  myformat.hpp  observer.hpp  uart.hpp
src/: angle_filter.cpp  motor.cpp  observer.cpp  uart.cpp
